--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="assets/cs/style.css">
-    <link rel="stylesheet" href="assets/cs/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/cs/toastr.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/toastr.min.css">
     <title>Pick Color</title>
 </head>
 <body>
